[gd_scene load_steps=4 format=3 uid="uid://dkw5woflnj55d"]

[ext_resource type="Texture2D" uid="uid://87ywh2l10knb" path="res://gui/menubar/game/beginner_hover.png" id="1_qddxy"]
[ext_resource type="Script" path="res://gui/menubar/menu_check_button.gd" id="2_4p7pe"]
[ext_resource type="PackedScene" uid="uid://c3phwilxdkiy" path="res://gui/menubar/check.tscn" id="2_ciykg"]

[node name="Button" type="TextureButton"]
offset_right = 119.0
offset_bottom = 17.0
texture_hover = ExtResource("1_qddxy")
script = ExtResource("2_4p7pe")

[node name="check" parent="." instance=ExtResource("2_ciykg")]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 11.0
offset_bottom = 12.0

[connection signal="mouse_entered" from="." to="." method="on_mouseenter"]
[connection signal="mouse_exited" from="." to="." method="on_mouseleave"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
